# NDKLearn

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/jnilearn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/common/: DyRegister.cpp  DyRegister.h  Log.h
app/src/main/java/com/example/jnilearn/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jnilearn/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
